--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,68 +1,145 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url("https://fonts.googleapis.com/css2?family=Alata&display=swap");
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  font-family: "Alata", sans-serif;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+
+.homepage {
   min-height: 100vh;
+  /* background: url(img/iconicbgc.jpg) no-repeat; */
+  background-color: black;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  z-index: 0;
+  overflow: hidden;
+  position: relative;
+}
+.weare {
+  min-height: 100vh;
+  /* background: url(img/iconicbgc.jpg) no-repeat; */
+  background-color:blanchedalmond;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  z-index: 0;
+  overflow: hidden;
+  position: relative;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+header {
+  background: #1e1e1e;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 50px;
+  position: fixed;
+  border-radius: 0 0 10px 10px;
+  top: 0;
+  z-index: 1000;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+header .logo {
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+}
+
+header .logo img {
+  max-height: 50px;
+  width: auto;
+}
+
+header nav ul {
+  display: flex;
+}
+
+header nav ul li {
+  list-style: none;
+}
+
+header nav ul li a {
+  display: inline-block;
+  color: #0085ff;
+  padding: 5px 0;
+  margin: 0 10px;
+  border: 3px solid transparent;
+  transition: 0.2s;
+}
+
+header nav ul li a:hover,
+header nav ul li a.active {
+  border-bottom-color: dodgerblue;
+}
+
+.hamburger {
+  color: #0085ff;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  display: none;
+  position: relative;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.hamburger-icon,
+.close-icon {
+  display: none;
+  font-size: 24px;
+}
+
+@media only screen and (max-width: 900px) {
+  header {
+    padding: 0 30px;
   }
-  a:hover {
-    color: #747bff;
+}
+
+@media only screen and (max-width: 700px) {
+  .hamburger {
+    display: block;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .hamburger-icon {
+    display: block;
+  }
+
+  header nav {
+    position: absolute;
+    margin-top: 0.5rem;
+    width: 100%;
+    left: -100%;
+    top: 70px;
+    background: #1e1e1e;
+    padding: 30px;
+    transition: 0.3s;
+  }
+
+  header #nav_check:checked ~ nav {
+    left: 0;
+  }
+
+  header #nav_check:checked ~ .hamburger .hamburger-icon {
+    display: none;
+  }
+
+  header #nav_check:checked ~ .hamburger .close-icon {
+    display: block;
+  }
+
+  header nav ul {
+    display: block;
+    text-align: center;
+  }
+
+  header nav ul li {
+    margin: 15px 0;
+  }
+
+  header nav ul li a {
+    margin: 0;
   }
 }
