--- a/client/src/index.css
+++ b/client/src/index.css
@@ -92,53 +92,53 @@ header nav ul li a.active {
 }
 
 .weare {
-  background-color: blanchedalmond;
+  background-color: #ffff;
 }
 
 .hero-logo {
-  margin-top: 90px;
-  width: 40%;
+  margin-top: 50px;
+  width: 30%;
   height: auto;
 }
 
-.mouse-btn {
-  margin: -1px auto;
-  width: 40px;
-  height: 80px;
-  border: 3px solid rgba(122, 122, 124, 0.918);
-  border-radius: 20px;
+.bgbox {
+  position: relative;
+  color: #0085ff;
+  padding: 2rem;
+  margin: 5rem 1rem 2.5rem 1rem;
+  width: auto;
+  height: auto;
+  border-radius: 10px;
+  border: solid #0085ff 2px;
+  text-align: center;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.mouse-scroll {
-  display: block;
-  width: 20px;
-  height: 20px;
-  background: linear-gradient(
-    170deg,
-    rgba(122, 122, 124, 0.918),
-    rgb(123, 124, 124)
-  );
-  border-radius: 50%;
-  margin: auto;
-  animation: scrolling13 1s linear infinite;
+.heading1 {
+  font-size: 8vh;
 }
 
-@keyframes scrolling13 {
-  0% {
-    opacity: 0;
-    transform: translateY(-20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(20px);
-  }
+.heading2 {
+  font-size: 15vh;
+}
+
+.para{
+  margin-top: 10px;
 }
 
 /* Responsive Styles */
 @media only screen and (max-width: 1200px) {
   .hero-logo {
-    width: 60%;
+    width: 50%;
+  }
+  .heading1 {
+    font-size: 6vh;
+  }
+  .heading2 {
+    font-size: 12vh;
   }
 }
 
@@ -169,6 +169,7 @@ header nav ul li a.active {
     top: 70px;
     background: #1e1e1e;
     padding: 20px;
+    border-radius: 10px;
     transition: left 0.3s;
   }
 
@@ -212,40 +213,12 @@ header nav ul li a.active {
     width: 80%;
     margin-top: 50px;
   }
-
-  .mouse-btn {
-    width: 30px;
-    height: 60px;
-  }
-
-  .mouse-scroll {
-    width: 15px;
-    height: 15px;
-  }
-
-  .container_mouse span {
-    font-size: 0.9rem;
-  }
 }
 
 @media only screen and (max-width: 500px) {
   .hero-logo {
     width: 90%;
     margin-top: 30px;
-  }
-
-  .mouse-btn {
-    width: 25px;
-    height: 50px;
-  }
-
-  .mouse-scroll {
-    width: 10px;
-    height: 10px;
-  }
-
-  .container_mouse span {
-    font-size: 0.8rem;
   }
 }
 
@@ -264,5 +237,31 @@ header nav ul li a.active {
   }
   to {
     transform: rotate(90deg);
+  }
+}
+
+@media (max-width: 768px) {
+  .bgbox {
+    padding: 1.5rem;
+    margin: 4rem 0.5rem 2rem 0.5rem;
+  }
+  .heading1 {
+    font-size: 4vh;
+  }
+  .heading2 {
+    font-size: 10vh;
+  }
+}
+
+@media (max-width: 480px) {
+  .bgbox {
+    padding: 1rem;
+    margin: 3rem 0.5rem 1.5rem 0.5rem;
+  }
+  .heading1 {
+    font-size: 3vh;
+  }
+  .heading2 {
+    font-size: 8vh;
   }
 }
