--- a/client/src/index.css
+++ b/client/src/index.css
@@ -176,14 +176,49 @@ header nav ul li a.active {
 }
 
 .card {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
   display: flex;
+  position: relative;
+  overflow: hidden;
   gap: 1rem; /* Adds space between the images */
 }
 
 .productimg {
-  max-width: 100%; /* Ensures the image doesn't overflow */
-  border-radius: 5px; /* Rounds the corners of the images */
+  display: block;
+  width: 100%;
+  height: auto;
 }
+
+.card .info {
+  display: flex;
+  font-size: 1rem;
+  text-align: center;
+  padding: 0.1rem;
+  flex-direction: column;
+  position: absolute;
+  bottom: 0;
+  border: 1px solid #0085ff;
+  border-radius: 1rem;
+  background-color: rgba(255, 255, 255, 0.65);
+  width: 100%;
+  height: 20%;
+  transition: 1s ease;
+}
+
+.productname {
+  font-size: 3vh;
+  color: #0085ff;
+  padding: 1rem;
+}
+
+
+.card:hover .info {
+  height: 60%;
+}
+
+
 /* Responsive Styles */
 @media only screen and (max-width: 1200px) {
   .hero-logo {
@@ -310,5 +345,8 @@ header nav ul li a.active {
   }
   .heading2 {
     font-size: 8vh;
+  }
+  .productname {
+    font-size: 3.5vh;
   }
 }
