--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
+/* Google Font Import */
 @import url("https://fonts.googleapis.com/css2?family=Alata&display=swap");
 
+/* Reset and Global Styles */
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +11,7 @@
   box-sizing: border-box;
 }
 
+/* Scrollbar Styles */
 ::-webkit-scrollbar {
   height: 0.5rem;
   width: 0.5rem;
@@ -23,9 +26,10 @@
   border-radius: 1rem;
 }
 
+/* Header Styles */
 header {
   background: rgba(30, 30, 30, 0.47);
-  border-radius: 16px;
+  border-radius: 0 0 10px 10px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(12.1px);
   -webkit-backdrop-filter: blur(12.1px);
@@ -36,13 +40,11 @@ header {
   justify-content: space-between;
   padding: 0 50px;
   position: fixed;
-  border-radius: 0 0 10px 10px;
   top: 0;
   z-index: 1000;
 }
 
 header .logo {
-  margin-top: 5px;
   display: flex;
   align-items: center;
 }
@@ -54,10 +56,6 @@ header .logo img {
 
 header nav ul {
   display: flex;
-}
-
-header nav ul li {
-  list-style: none;
 }
 
 header nav ul li a {
@@ -87,6 +85,7 @@ header nav ul li a.active {
   font-size: 24px;
 }
 
+/* Section Styles */
 .homepage,
 .weare,
 .products {
@@ -94,9 +93,8 @@ header nav ul li a.active {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  z-index: 0;
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
 }
 
 .homepage {
@@ -110,56 +108,44 @@ header nav ul li a.active {
   background-color: #ffffff;
 }
 
+/* Hero Logo */
 .hero-logo {
   margin-top: 50px;
   width: 30%;
   height: auto;
 }
 
-.bgbox {
+/* Content Boxes */
+.bgbox,
+.productbox,
+.clients {
   position: relative;
-  color: #0085ff;
   padding: 1rem;
   margin: 2rem 1rem 2.5rem 1rem;
-  width: auto;
-  height: auto;
   border-radius: 10px;
-  border: solid #0085ff 2px;
   text-align: center;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+}
+
+.bgbox {
+  color: #0085ff;
+  border: 2px solid #0085ff;
 }
 
 .productbox {
-  position: relative;
   color: #ffffff;
   background-color: #0085ff;
-  padding: 1rem;
-  margin: 2rem 1rem 2.5rem 1rem;
-  border-radius: 10px;
   border: 2px solid #0085ff;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .clients {
-  position: relative;
   color: #0085ff;
-  padding: 1rem;
-  
-  border: 2px solid #0085ff;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
+/* Headings and Paragraphs */
 .heading1 {
   font-size: 8vh;
 }
@@ -172,21 +158,22 @@ header nav ul li a.active {
   margin-top: 10px;
 }
 
-.productbox hr {
-  border: none;
-  height: 1px;
-  background-color: #ffffff;
-  margin: 10px 0;
-  width: 10%;
-}
+.productbox hr,
 .clients hr {
   border: none;
   height: 1px;
-  background-color: #0085ff;
   margin: 10px 0;
-  width: 10%;
 }
 
+.productbox hr {
+  background-color: #ffffff;
+}
+
+.clients hr {
+  background-color: #0085ff;
+}
+
+/* Product Card Styles */
 .productcard {
   display: flex;
   justify-content: center;
@@ -243,6 +230,7 @@ header nav ul li a.active {
   font-size: 2vh;
 }
 
+/* Show More Button */
 .showmore {
   display: flex;
   align-items: center;
@@ -252,29 +240,32 @@ header nav ul li a.active {
 
 .button-80 {
   background: #fff;
-  backface-visibility: hidden;
   border-radius: 1rem;
-  border-style: solid;
-  border-width: 0.125rem;
-  box-sizing: border-box;
+  border: 0.125rem solid;
   color: #0085ff;
   cursor: pointer;
-  display: inline-block;
   font-size: 1.125rem;
   font-weight: 700;
-  letter-spacing: -0.01em;
-  line-height: 1.3;
   padding: 0.875rem 1.125rem;
   position: relative;
   text-align: left;
-  text-decoration: none;
-  transform: translateZ(0) scale(1);
   transition: transform 0.2s;
   user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
 }
 
+.button-80:hover {
+  transform: scale(1.05);
+}
+
+.button-80:active {
+  transform: scale(1.05) translateY(0.125rem);
+}
+
+.button-80:focus {
+  outline: 0 solid transparent;
+}
+
+/* Arrow Link */
 .arrowlink {
   background-color: #0085ff;
   border-radius: 50%;
@@ -285,143 +276,18 @@ header nav ul li a.active {
   position: absolute;
   top: 10px;
   right: 10px;
-  color: white; /* This sets the text color to white */
+  color: white;
   cursor: pointer;
 }
 
 .GoArrowUpRight {
   width: 1.5rem;
   height: 1.5rem;
-  color: white; /* Ensure the link text color is white */
-  text-decoration: none; /* Remove underline from the link */
+  color: white;
+  text-decoration: none;
 }
 
-.button-80:not(:disabled):hover {
-  transform: scale(1.05);
-}
-
-.button-80:not(:disabled):hover:active {
-  transform: scale(1.05) translateY(0.125rem);
-}
-
-.button-80:focus {
-  outline: 0 solid transparent;
-}
-
-.button-80:focus:before {
-  content: "";
-  left: calc(-1 * 0.375rem);
-  pointer-events: none;
-  position: absolute;
-  top: calc(-1 * 0.375rem);
-  transition: border-radius;
-  user-select: none;
-}
-
-.button-80:focus:not(:focus-visible) {
-  outline: 0 solid transparent;
-}
-
-.button-80:focus:not(:focus-visible):before {
-  border-width: 0;
-}
-
-.button-80:not(:disabled):active {
-  transform: translateY(0.125rem);
-}
-
-/* Responsive Styles */
-@media only screen and (max-width: 1200px) {
-  .hero-logo {
-    width: 50%;
-  }
-  .heading1 {
-    font-size: 6vh;
-  }
-  .heading2 {
-    font-size: 12vh;
-  }
-}
-
-@media only screen and (max-width: 900px) {
-  header {
-    padding: 0 30px;
-  }
-  .hero-logo {
-    width: 70%;
-    margin-top: 70px;
-  }
-}
-
-@media only screen and (max-width: 700px) {
-  .hamburger {
-    display: block;
-  }
-
-  .hamburger-icon {
-    display: block;
-  }
-
-  header nav {
-    position: absolute;
-    margin-top: 0.5rem;
-    width: 100%;
-    left: -100%;
-    top: 70px;
-    background: #1e1e1e;
-    padding: 20px;
-    border-radius: 10px;
-    transition: left 0.3s;
-  }
-
-  header #nav_check:checked ~ nav {
-    left: 0;
-  }
-
-  header #nav_check:checked ~ .hamburger .hamburger-icon {
-    display: none;
-    animation: rotateOut 0.5s forwards;
-  }
-
-  header #nav_check:checked ~ .hamburger .close-icon {
-    display: block;
-    animation: rotateIn 0.5s forwards;
-  }
-
-  header #nav_check:not(:checked) ~ .hamburger .hamburger-icon {
-    animation: rotateIn 0.5s forwards;
-  }
-
-  header #nav_check:not(:checked) ~ .hamburger .close-icon {
-    display: none;
-    animation: rotateOut 0.5s forwards;
-  }
-
-  header nav ul {
-    display: block;
-    text-align: center;
-  }
-
-  header nav ul li {
-    margin: 15px 0;
-  }
-
-  header nav ul li a {
-    margin: 0;
-  }
-
-  .hero-logo {
-    width: 80%;
-    margin-top: 50px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .hero-logo {
-    width: 90%;
-    margin-top: 30px;
-  }
-}
+/* Animation Keyframes */
 
 @keyframes rotateIn {
   from {
@@ -441,6 +307,119 @@ header nav ul li a.active {
   }
 }
 
+/* Logo Slider */
+.logos {
+  overflow: hidden;
+  padding: 10px 0;
+  background: white;
+  white-space: nowrap;
+}
+
+.logos-slide img {
+  height: 130px;
+  margin: 0 20px;
+}
+
+.logos-slide {
+  display: flex;
+  animation: scroll 25s linear infinite;
+}
+
+.logos-slide:hover {
+  animation-play-state: paused;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+/* Media Queries */
+@media (max-width: 1200px) {
+  .hero-logo {
+    width: 50%;
+  }
+  .heading1 {
+    font-size: 6vh;
+  }
+  .heading2 {
+    font-size: 12vh;
+  }
+}
+
+@media (max-width: 900px) {
+  header {
+    padding: 0 30px;
+  }
+  .hero-logo {
+    width: 70%;
+    margin-top: 70px;
+  }
+}
+
+@media (max-width: 700px) {
+  .hamburger {
+    display: block;
+  }
+  .hamburger-icon {
+    display: block;
+  }
+  header nav {
+    position: absolute;
+    margin-top: 0.5rem;
+    width: 100%;
+    left: -100%;
+    top: 70px;
+    background: #1e1e1e;
+    padding: 20px;
+    border-radius: 10px;
+    transition: left 0.3s;
+  }
+  header #nav_check:checked ~ nav {
+    left: 0;
+  }
+  header #nav_check:checked ~ .hamburger .hamburger-icon {
+    display: none;
+    animation: rotateOut 0.5s forwards;
+  }
+  header #nav_check:checked ~ .hamburger .close-icon {
+    display: block;
+    animation: rotateIn 0.5s forwards;
+  }
+  header #nav_check:not(:checked) ~ .hamburger .hamburger-icon {
+    animation: rotateIn 0.5s forwards;
+  }
+  header #nav_check:not(:checked) ~ .hamburger .close-icon {
+    display: none;
+    animation: rotateOut 0.5s forwards;
+  }
+  header nav ul {
+    display: block;
+    text-align: center;
+  }
+  header nav ul li {
+    margin: 15px 0;
+  }
+  header nav ul li a {
+    margin: 0;
+  }
+  .hero-logo {
+    width: 80%;
+    margin-top: 50px;
+  }
+}
+
+@media (max-width: 500px) {
+  .hero-logo {
+    width: 90%;
+    margin-top: 30px;
+  }
+}
+
 @media (max-width: 768px) {
   .heading1 {
     font-size: 4vh;
@@ -448,16 +427,16 @@ header nav ul li a.active {
   .heading2 {
     font-size: 10vh;
   }
-}
 
-@media (max-width: 480px) {
-  .heading1 {
-    font-size: 3vh;
-  }
-  .heading2 {
-    font-size: 8vh;
-  }
-  .productname {
-    font-size: 3.5vh;
+  @media (max-width: 480px) {
+    .heading1 {
+      font-size: 3vh;
+    }
+    .heading2 {
+      font-size: 8vh;
+    }
+    .productname {
+      font-size: 3.5vh;
+    }
   }
 }
