--- a/client/src/index.css
+++ b/client/src/index.css
@@ -161,8 +161,11 @@ header nav ul li a.active {
 .productbox hr,
 .clients hr {
   border: none;
-  height: 1px;
-  margin: 10px 0;
+  height: 1.5px;
+  width: 90px;
+  margin: 10px;
+ 
+
 }
 
 .productbox hr {
@@ -318,15 +321,19 @@ header nav ul li a.active {
 .logos-slide img {
   height: 130px;
   margin: 0 20px;
+  filter: grayscale(1);
 }
 
 .logos-slide {
   display: flex;
-  animation: scroll 25s linear infinite;
+  animation: scroll 15s linear infinite;
 }
 
 .logos-slide:hover {
   animation-play-state: paused;
+}
+.logos-slide .item:hover {
+  filter: grayscale(0);
 }
 
 @keyframes scroll {
