--- a/client/src/index.css
+++ b/client/src/index.css
@@ -98,10 +98,27 @@ header nav ul li a.active {
 }
 
 .homepage {
-  background-color: black;
+  /* background-color: black; */
   display: flex;
   align-items: center;
+  background-image: url(../src/assets/image\ 25.png);
   justify-content: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation: change 10s infinite ease-in-out;
+}
+
+@keyframes change {
+  0% {
+    background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (16) 1.png");
+  }
+  20% {
+    background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (14) 1.png");
+  }
+  40% {
+    background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (15) 1.png");
+  }
 }
 
 .weare {
@@ -113,6 +130,26 @@ header nav ul li a.active {
   margin-top: 50px;
   width: 30%;
   height: auto;
+}
+
+@keyframes slide {
+  0%,
+  100% {
+    left: -70px;
+  }
+  50% {
+    left: 100%;
+  }
+}
+
+.footer-log {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-logo {
+  width: 15rem;
+  height: 15rem;
 }
 
 /* Content Boxes */
@@ -397,6 +434,78 @@ header nav ul li a.active {
 .contactdesc {
   margin: 0.5rem 0;
   font-weight: normal;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footerbox {
+  border: 4px solid #0085ff;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2rem;
+  width: 90%;
+  background-color: #1e1e1e;
+  padding: 2rem;
+  border-radius: 30px 30px 0 0;
+  color: #ffffff;
+}
+
+.footer-content {
+  text-decoration: none;
+
+  padding: 20px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: left;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.footer-soc {
+  text-decoration: none;
+  flex-direction: column;
+  padding: 20px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: left;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.footer-head {
+  font-size: 1.5rem;
+  margin-bottom: 12px;
+}
+
+.footer-desc {
+  color: #0085ff;
+  margin: 5px;
+  font-size: 1.1rem;
+}
+
+.footer-desc:hover {
+  color: #fff;
+}
+
+.sociallll {
+  display: flex;
+  align-items: start;
+  justify-content: left;
+  gap: 2rem;
+}
+
+.botttom {
+  background-color: #1e1e1e;
+  color: #0085ff;
+  padding: 5px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Media Queries */
