--- a/client/src/index.css
+++ b/client/src/index.css
@@ -227,7 +227,8 @@ header nav ul li a.active {
 }
 
 .productbox hr,
-.clients hr {
+.clients hr,
+.productpage hr {
   border: none;
   height: 1.5px;
   width: 90px;
@@ -517,6 +518,50 @@ header nav ul li a.active {
   justify-content: center;
 }
 
+/* Products Section starts here */
+
+.productpage {
+  min-height: 45vh;
+  background-size: cover;
+  background-color: #0085ff;
+  background-position: center;
+  background-attachment: fixed;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  text-align: center;
+}
+
+.page-header {
+  font-size: 3rem;
+  margin: 0;
+  color: #fff;
+}
+
+.breadcrumb {
+  font-size: 1.2rem;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 0.5rem;
+  text-decoration: none;
+}
+
+.links1 {
+  text-decoration: none;
+  color: #1e1e1e;
+}
+
+
+.links2 {
+  text-decoration: none;
+  color: #fff;
+}
 /* Media Queries */
 @media (max-width: 1200px) {
   .hero-logo {
@@ -606,6 +651,17 @@ header nav ul li a.active {
   .heading2 {
     font-size: 10vh;
   }
+  .productpage {
+    min-height: 55vh;
+  }
+
+  .page-header {
+    font-size: 2.5rem;
+  }
+
+  .breadcrumb {
+    font-size: 1rem;
+  }
 
   @media (max-width: 480px) {
     .heading1 {
@@ -616,6 +672,17 @@ header nav ul li a.active {
     }
     .productname {
       font-size: 3.5vh;
+    }
+    .productpage {
+      min-height: 45vh;
+    }
+
+    .page-header {
+      font-size: 2rem;
+    }
+
+    .breadcrumb {
+      font-size: 0.9rem;
     }
   }
 }
