--- a/client/src/index.css
+++ b/client/src/index.css
@@ -582,6 +582,38 @@ header nav ul li a.active {
   padding: 10px;
 }
 
+.about-page {
+  display: flex;
+}
+
+.about-sec {
+  margin: 2rem 1rem 2.5rem 1rem;
+  border-radius: 10px;
+  
+
+  color: #0085ff;
+  border: 2px solid #0085ff;
+}
+.about-bgbox {
+  position: relative;
+  padding: 1rem;
+  margin: 2rem 1rem 2.5rem 1rem;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  color: #0085ff;
+  border: 2px solid #0085ff;
+}
+
+.about-bgbox h1 {
+  display: flex;
+  gap: 2rem;
+}
+
 /* Media Queries */
 @media (max-width: 1200px) {
   .hero-logo {
