--- a/client/src/index.css
+++ b/client/src/index.css
@@ -101,13 +101,11 @@ header nav ul li a.active {
   position: relative;
   overflow: hidden;
 }
-.about-content{
+.about-content {
   display: flex;
-  align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   flex-direction: row;
-
-
 }
 
 .homepage {
@@ -597,16 +595,18 @@ header nav ul li a.active {
 
 .about-page {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
-  margin: 1rem 0.5rem 1rem 0.5rem;
-  border: 2px solid #0085ff;
+  margin: 1rem 0.5rem;
+  flex-wrap: wrap;
 }
 
 .about-sec {
   border-radius: 10px;
   overflow: hidden;
-  margin: 1rem 0.5rem 1rem 0.5rem;
+  margin: 1rem 0.5rem;
   border: 2px solid #0085ff;
 }
 
@@ -618,7 +618,6 @@ header nav ul li a.active {
   display: flex;
   flex-direction: column;
   align-items: center;
-  cursor: pointer;
   background-color: #f9f9f9;
 }
 
@@ -640,6 +639,30 @@ header nav ul li a.active {
 .about-content {
   text-align: left;
   color: #0085ff;
+}
+
+.progress-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: space-around;
+}
+
+.progress-container {
+  width: 12rem;
+  height: 15rem;
+  padding: 1rem;
+  flex-direction: row;
+  flex-wrap: wrap;
+  position: relative;
+  padding: .5rem;
+  margin: .5rem;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Media Queries */
