--- a/client/src/index.css
+++ b/client/src/index.css
@@ -45,6 +45,11 @@ header {
   position: fixed;
   top: 0;
   z-index: 1000;
+  transition: top 0.3s;
+}
+
+header.hidden {
+  top: -70px;
 }
 
 header .logo {
@@ -80,6 +85,12 @@ header nav ul li a.active {
   cursor: pointer;
   display: none;
   position: relative;
+}
+
+.hamburger-icon,
+.close-icon {
+  display: none;
+  font-size: 24px;
 }
 
 .hamburger-icon,
@@ -481,7 +492,7 @@ header nav ul li a.active {
   gap: 2rem;
   width: 90%;
   background-color: #1e1e1e;
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 30px 30px 0 0;
   color: #ffffff;
 }
@@ -655,8 +666,8 @@ header nav ul li a.active {
   flex-direction: row;
   flex-wrap: wrap;
   position: relative;
-  padding: .5rem;
-  margin: .5rem;
+  padding: 0.5rem;
+  margin: 0.5rem;
   border-radius: 10px;
   text-align: center;
   display: flex;
