--- a/client/src/index.css
+++ b/client/src/index.css
@@ -490,7 +490,7 @@ header nav ul li a.active {
   flex-direction: row;
   flex-wrap: wrap;
   gap: 2rem;
-  /* width: 90%; */
+  width: 100%;
   background-color: #1e1e1e;
   padding: 1rem;
   border-radius: 30px 30px 0 0;
