--- a/client/src/index.css
+++ b/client/src/index.css
@@ -678,7 +678,6 @@ header nav ul li a.active {
 
 .contact-us {
   min-height: 100vh;
-
   padding: 2rem;
   display: flex;
   justify-content: center;
@@ -702,7 +701,6 @@ header nav ul li a.active {
   background: rgba(255, 255, 255, 0.9);
   border-radius: 10px;
   border: 2px solid #0085ff;
-
   padding: 2rem;
   margin: 1rem;
   flex: 1;
@@ -720,7 +718,7 @@ header nav ul li a.active {
   margin-bottom: 2rem;
 }
 
-.contactbx1 div {
+.contactbx1 .form-group {
   margin-bottom: 1rem;
 }
 
@@ -764,7 +762,45 @@ header nav ul li a.active {
 }
 
 .contact-button:hover {
-  color: #1e1e1e;
+  background-color: #006bb3;
+  color: #fff;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.address,
+.phnoemail,
+.socials {
+  margin-bottom: 1rem;
+}
+
+.address h3,
+.phno h3 {
+  margin-bottom: 0.5rem;
+}
+
+.address p,
+.phno p,
+.emailid p {
+  display: inline-block;
+  margin-left: 0.5rem;
+  vertical-align: middle;
+}
+
+.socials {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.socials svg {
+  font-size: 2rem;
+  color: #0085ff;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.socials svg:hover {
+  color: #006bb3;
 }
 
 /* Media Queries */
