--- a/client/src/index.css
+++ b/client/src/index.css
@@ -696,8 +696,7 @@ header nav ul li a.active {
   max-width: 1200px;
 }
 
-.contactbx1,
-.contactbx2 {
+.contact-box {
   background: rgba(255, 255, 255, 0.9);
   border-radius: 10px;
   border: 2px solid #0085ff;
@@ -708,28 +707,26 @@ header nav ul li a.active {
   max-width: 500px;
 }
 
-.contactbx1 h2,
-.contactbx2 h2 {
+.contact-box h2 {
   margin-bottom: 1rem;
 }
 
-.contactbx1 p,
-.contactbx2 p {
+.contact-box p {
   margin-bottom: 2rem;
 }
 
-.contactbx1 .form-group {
+.form-group {
   margin-bottom: 1rem;
 }
 
-.contactbx1 label {
+.form-group label {
   display: block;
   margin-bottom: 0.5rem;
   font-weight: bold;
 }
 
-.contactbx1 input,
-.contactbx1 textarea {
+.form-group input,
+.form-group textarea {
   width: 100%;
   padding: 0.75rem;
   margin-top: 0.25rem;
@@ -738,13 +735,13 @@ header nav ul li a.active {
   font-size: 1rem;
 }
 
-.contactbx1 textarea {
+.form-group textarea {
   height: 150px;
   resize: vertical;
 }
 
-.contactbx1 input:focus,
-.contactbx1 textarea:focus {
+.form-group input:focus,
+.form-group textarea:focus {
   outline: none;
   border-color: #0085ff;
 }
@@ -762,34 +759,33 @@ header nav ul li a.active {
 }
 
 .contact-button:hover {
-  color: #1e1e1e;
+  background-color: #006bb3;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
 
-.address,
-.phnoemail,
-.socials {
+.contact-info {
   margin-bottom: 1rem;
-  padding: 1rem;
 }
 
-.address h3,
-.phno h3 {
+.contact-info h3 {
   margin-bottom: 0.5rem;
 }
 
-.address p,
-.phno p,
-.emailid p {
-  display: inline-block;
-  margin-left: 0.5rem;
-  vertical-align: middle;
+.info-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.info-item svg {
+  margin-right: 0.5rem;
 }
 
 .socials {
   display: flex;
-  
+  justify-content: space-around;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 .socials svg {
@@ -835,18 +831,12 @@ header nav ul li a.active {
   justify-content: start;
 }
 
-
 .social-media {
   display: flex;
   align-items: start;
   justify-content: start;
   gap: 2.6rem;
 }
-
-
-
-
-
 
 /* Media Queries */
 @media (max-width: 1200px) {
