--- a/client/src/index.css
+++ b/client/src/index.css
@@ -696,7 +696,8 @@ header nav ul li a.active {
   max-width: 1200px;
 }
 
-.contact-box {
+.contactbx1,
+.contactbx2 {
   background: rgba(255, 255, 255, 0.9);
   border-radius: 10px;
   border: 2px solid #0085ff;
@@ -707,26 +708,28 @@ header nav ul li a.active {
   max-width: 500px;
 }
 
-.contact-box h2 {
+.contactbx1 h2,
+.contactbx2 h2 {
   margin-bottom: 1rem;
 }
 
-.contact-box p {
+.contactbx1 p,
+.contactbx2 p {
   margin-bottom: 2rem;
 }
 
-.form-group {
+.contactbx1 .form-group {
   margin-bottom: 1rem;
 }
 
-.form-group label {
+.contactbx1 label {
   display: block;
   margin-bottom: 0.5rem;
   font-weight: bold;
 }
 
-.form-group input,
-.form-group textarea {
+.contactbx1 input,
+.contactbx1 textarea {
   width: 100%;
   padding: 0.75rem;
   margin-top: 0.25rem;
@@ -735,13 +738,13 @@ header nav ul li a.active {
   font-size: 1rem;
 }
 
-.form-group textarea {
+.contactbx1 textarea {
   height: 150px;
   resize: vertical;
 }
 
-.form-group input:focus,
-.form-group textarea:focus {
+.contactbx1 input:focus,
+.contactbx1 textarea:focus {
   outline: none;
   border-color: #0085ff;
 }
@@ -759,33 +762,34 @@ header nav ul li a.active {
 }
 
 .contact-button:hover {
-  background-color: #006bb3;
+  color: #1e1e1e;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
 
-.contact-info {
+.address,
+.phnoemail,
+.socials {
   margin-bottom: 1rem;
+  padding: 1rem;
 }
 
-.contact-info h3 {
+.address h3,
+.phno h3 {
   margin-bottom: 0.5rem;
 }
 
-.info-item {
-  display: flex;
-  align-items: center;
-  margin-bottom: 1rem;
-}
-
-.info-item svg {
-  margin-right: 0.5rem;
+.address p,
+.phno p,
+.emailid p {
+  display: inline-block;
+  margin-left: 0.5rem;
+  vertical-align: middle;
 }
 
 .socials {
   display: flex;
-  justify-content: space-around;
+  
   align-items: center;
-  margin-bottom: 1rem;
 }
 
 .socials svg {
@@ -831,12 +835,18 @@ header nav ul li a.active {
   justify-content: start;
 }
 
+
 .social-media {
   display: flex;
   align-items: start;
   justify-content: start;
   gap: 2.6rem;
 }
+
+
+
+
+
 
 /* Media Queries */
 @media (max-width: 1200px) {
