--- a/client/src/index.css
+++ b/client/src/index.css
@@ -189,7 +189,7 @@ header nav ul li .dropdown-toggle:hover {
   /* background-color: black; */
   display: flex;
   align-items: center;
-  background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (14) 1.png");
+  /* background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (14) 1.png"); */
   justify-content: center;
   background-position: center;
   background-repeat: no-repeat;
@@ -197,12 +197,22 @@ header nav ul li .dropdown-toggle:hover {
   animation: change 10s infinite ease-in-out;
 }
 
+.homepage-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
 @keyframes change {
   0% {
-    background-color: black;
+    background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (16) 1.png");
   }
   20% {
-    background-image: url("../src/assets/image\ 25.png");
+    background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (14) 1.png");
   }
   40% {
     background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (15) 1.png");
@@ -214,7 +224,7 @@ header nav ul li .dropdown-toggle:hover {
     background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (16) 1.png");
   }
   100% {
-    background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (14) 1.png");
+    background-image: url("../src/assets/image\ 25.png");
   }
 }
 
