--- a/client/src/index.css
+++ b/client/src/index.css
@@ -860,7 +860,7 @@ header nav ul li .dropdown-toggle:hover {
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  max-width: 1200px;
+  max-width: 100vw;
 }
 
 .contactbx1,
@@ -1131,8 +1131,8 @@ header nav ul li .dropdown-toggle:hover {
     padding: 0.75rem;
   }
   .contact-sec {
-    flex-direction: column;
-    align-items: stretch;
+    align-items: center;
+    margin-right: 3rem;
   }
 
   .contactbx1,
