contact page error solved (2)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1132,7 +1132,7 @@ header nav ul li .dropdown-toggle:hover {
   }
   .contact-sec {
     align-items: center;
-    margin-right: 3rem;
+    justify-content: center;
   }
 
   .contactbx1,
