--- a/client/src/index.css
+++ b/client/src/index.css
@@ -211,13 +211,13 @@ header nav ul li .dropdown-toggle:hover {
   0% {
   }
   20% {
-    background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (14) 1.png");
+    background-image: url("../src/assets/WhatsApp Image 2024-07-30 at 2.46.55 PM 1.png");
   }
   40% {
     background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (15) 1.png");
   }
   60% {
-    background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (16) 1.png");
+    background-image: url("../src/WhatsApp Image 2024-07-30 at 2.46.55 PM (1) 1.png");
   }
   80% {
     background-image: url("../src/assets/pikaso_enhance__vivid_2K_Standard_r_c_ (16) 1.png");
